// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly with title 1`] = `
.c0 {
  margin-top: 1rem;
  padding-bottom: 0.5rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 {
  display: inline-block;
  margin: 0 2rem 0 0;
  font-size: 1.25rem;
  line-height: 1.5625rem;
  font-weight: 700;
}

@media (min-width:31.25em) {
  .c1 {
    font-size: 2rem;
    line-height: 2.4375rem;
  }
}

<header
  className="c0"
>
  <h1
    className="c1"
  >
    Page Title
  </h1>
</header>
`;

exports[`Header renders correctly with title and back button 1`] = `
.c0 {
  margin-top: 1rem;
  padding-bottom: 0.5rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4 {
  display: inline-block;
  margin: 0 2rem 0 0;
  font-size: 1.25rem;
  line-height: 1.5625rem;
  font-weight: 700;
}

.c2 {
  vertical-align: middle;
}

.c1 {
  margin: 0 1rem 0 0;
  padding: 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  vertical-align: middle;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

@media (min-width:31.25em) {
  .c4 {
    font-size: 2rem;
    line-height: 2.4375rem;
  }
}

<header
  className="c0"
>
  <a
    className="c1"
    href="../"
  >
    <svg
      className="c2"
      color="#0CD664"
      fontSize="1.5rem"
      height="1em"
      viewBox="0 0 20 8"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5.08 8V4.8H20V3.2H5.08V0L0 4z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="c3"
    >
      Back to Cashier
    </span>
  </a>
  <h1
    className="c4"
  >
    Page Title
  </h1>
</header>
`;
